fix: make sure page bk img always covers screen

--- a/src/blocks/page/__background/page__background.css
+++ b/src/blocks/page/__background/page__background.css
@@ -5,4 +5,5 @@
     url(../../../images/background.jpg);
   background-repeat: no-repeat repeat;
   background-size: 100% auto;
+  min-height: 100vh;
 }
